@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#5107] Bugfix: Drop the use of forceReturnPath
 - [#5106] Change: Add more specific exceptions to Tx_Oelib_AbstractMailer::send
 - [#5104] Bugfix: E-Mail attachments with file name with content from memory are read from disk
 - [#5103] Bugfix: TestingFramework::cleanUp needs to discard stored e-mails
